# Folded-Reed-Solomon-List-Decoded-with-Aff3ct

./: CMakeLists.txt  Decoder_FRS.cpp  Decoder_FRS.hpp  Folding.cpp  main.cpp  test.txt
